css/ocellus.css
body {
    font-family: 'Helvetica Neue', Helvetica, Sans-serif;
    font-weight: 400;
    font-size: 1.5rem;
    margin: 0 auto;
}
.header {
    text-align: center;
    background-color: #f5f5f5;
    border-bottom: 1px solid silver;
    width: 100%;
}
.header-component {
    float: left;
}
.title {
    line-height: 20px;
    margin-top: 18px;
}
sup {
    font-size: 8px;
}
#about-link, #about-close, button {
    cursor: pointer;
}
#about-close {
       -moz-transition: all 1s ease-in-out;
    -webkit-transition: all 1s ease-in-out;
         -o-transition: all 1s ease-in-out;
        -ms-transition: all 1s ease-in-out;
            transition: all 1s ease-in-out;
        -moz-animation: blink normal 2s infinite ease-in-out;
     -webkit-animation: blink normal 2s infinite ease-in-out;
         -ms-animation: blink normal 2s infinite ease-in-out;
             animation: blink normal 2s infinite ease-in-out;
}
/* about-close fade-in fade-out */
@keyframes blink {
    0%   { color: rgba(0,0,0,1  ) }
    25%  { color: rgba(0,0,0,0.5) }
    50%  { color: rgba(0,0,0,0  ) }
    75%  { color: rgba(0,0,0,0.5) }
    100% { color: rgba(0,0,0,1  ) }
}
@-webkit-keyframes blink {
    0%   { color: rgba(0,0,0,1  ) }
    25%  { color: rgba(0,0,0,0.5) }
    50%  { color: rgba(0,0,0,0  ) }
    75%  { color: rgba(0,0,0,0.5) }
    100% { color: rgba(0,0,0,1  ) }
}

#fs-form {
    overflow: auto;
    line-height: 8px;
    margin-top: 0px;
    margin-bottom: 0 !important;
}
#fs-form table {
    padding: 0;
    margin: 0;
    width: 100%;
}
#fs-form td {
    border: none;
    padding: 0;
    margin: 0;
    overflow: hidden;
    width: 100%;
}
.fs-help {
    position: relative;
    text-align: left;
    text-transform: uppercase;
    font-size: xx-small;
    font-weight: 400;
    padding-left: 5px;
    color: darkgreen;
    margin-bottom: 0;
}
.fs-container {
    position: relative;
    width: calc(100% - 40px);
    min-height: 36px;
    border: 1px solid silver;
    border-radius: 5px 0 0 5px;
    background-color: white;
    padding-left: 0px;
    padding-right: 0px;
}
input[type="text"] {
    width: 95%;
    height: 36px !important;
    border: none !important;
    margin-bottom: 0 !important;
    padding-left: 5px;
    
}
input[type="text"]:after {
    clear: both;
}
input[type="text"].reqd {
    color: red;
}
#fs-go {
    padding: 0px 8px;
    border-radius: 0 5px 5px 0;
    border: 1px solid #444;
    background-color: #444;
    color: white;
}
input[type="checkbox"] {
    margin-top:5px;
    margin-left: 5px;
    float: left;
}
.msg {
    font-size: 12px;
    margin-bottom: 0px;
}
.cacheCheckMsg {
    text-align: left;
    line-height: 16px;
    margin-top: 0;
    color: red;
    font-size: 0.8em;
    margin-bottom: 10px;
}
.off-none {
    visibility: hidden;
    display: none;
}
.off-block {
    visibility: hidden;
    display: block;
}
.on {
    visibility: visible;
}
#about-text {
    margin-top: 12px;
}
h3 {
    font-size: 14px;
    text-align: center;
}
.transition-050 {
    -moz-transition: 0.50s;
    -webkit-transition: 0.50s;
    -ms-transition: 0.50s;
    -o-transition: 0.50s;
    transition: 0.50s;
}

.opacity85{ 
    opacity: 0.85; 
    filter: alpha(opacity=85); 
}
#wrapper {
    width: 99%;
    margin: 0 auto;
    background-color: white;
    opacity: 1;
    border: 0px solid red;
}

.grid {
    margin: 0em 0;
    padding: 0;
    font-size: .85em;
    display: flex;
    flex-wrap: wrap;
}

.masonry {
    margin: 0em 0;
    padding: 0;
    -moz-column-gap: 1em;
    -webkit-column-gap: 1em;
    column-gap: 1em;
    font-size: .85em;
    -moz-column-count: 1;
    -webkit-column-count: 1;
    column-count: 1;
}
.item {
    width: 100%;
    padding: 0px;
    border: 1px solid silver;
    margin-left: 0em;
}

.masonry figure {
    position: relative;
    overflow: hidden;
    border:0px solid #ccc;
    min-height: 200px;
    height: auto;
    margin: 0 0 1em 0 !important;

    /* avoid figures splitting across columns */
    /* see https://stackoverflow.com/a/17415553/183692 */
    overflow: hidden; /* fix for Firefox */
    break-inside: avoid-column;
    -webkit-column-break-inside: avoid;
}

.masonry figure img {
    width: 98%;
    border: 0px solid silver;
    margin-bottom: 0px;
}

.masonry figcaption {
    position: absolute;
    bottom: 0px;
    left: 0;
    width: 100%;
    max-height: 30px;
    padding: 5px;
    text-align: left;
    line-height: 1.5em;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    font-size: 1.2em;
    font-weight: 400;
    opacity: 1 !important;
    border: 0px solid grey;
    /*! margin-top: 30px */
}

.masonry figcaption a {
    cursor: pointer;
    text-decoration: underline;
    text-decoration-color: blue;
    text-decoration-style: double;
}

.masonry figcaption a.transition-050 {
    text-decoration-style: wavy;
}

.text {
    color: #000;
    background-color: #fff;
    font-size:1.2em;
}

.desc {
    display: block;
    padding: 0px;
}

/* Add animation to "page content" */
.animate-bottom {
    position: relative;
    -webkit-animation-name: animatebottom;
    -webkit-animation-duration: 1s;
    animation-name: animatebottom;
    animation-duration: 1s
}

@-webkit-keyframes animatebottom {
    from { bottom:-100px; opacity:0 } 
    to { bottom:0px; opacity:1 }
}

@keyframes animatebottom { 
    from{ bottom:-100px; opacity:0 } 
    to{ bottom:0; opacity:1 }
}
    
#pager {
    margin: 0 auto;
    z-index: 1;
    text-align: center;
    margin-top: 1em;
    margin-bottom: 6em;
}
    
#prev {
    margin-right: 1em;
}
    
#next {
    margin-left: 1em;
}
    
#prev:visited,
#next:visited {
    color: blue;
}
footer {
    bottom: 0;
    text-align: center;
    width: 100%;
}

footer.fixed {
    position: fixed;
}

footer.relative {
    position: relative;
}
    
footer img {
    width: 80%;
    max-width: 480px;
}
.autocomplete-suggestions {
    border: 1px solid lightgrey !important;
    margin-top: 2px;
}

.autocomplete-suggestion {
    font-size: 0.8em;
}

/* flickity */
/* external css: flickity.css */

/* * { box-sizing: border-box; } */

/* body { font-family: sans-serif; } */
.carousel {
  background: #FAFAFA;
}
.carousel-cell {
  width: 100%;
  margin-right: 10px;
  background: #333;
}
.carousel-cell.is-selected {
  background: #fff;
}
.carousel-cell-image {
  display: block;
  max-height: 100%;
  margin: 0 auto;
  max-width: 100%;
  opacity: 0;
  -webkit-transition: opacity 0.4s;
          transition: opacity 0.4s;
}

/* position dots up a bit */
.flickity-page-dots {
  bottom: -22px;
}
/* dots are lines */
.flickity-page-dots .dot {
  height: 4px;
  width: 40px;
  margin: 0;
  border-radius: 0;
}
/* unset Skeleton buttons */
.carousel button {
    padding: unset;
}

/* no circle */
.flickity-button {
  background: transparent;
}
/* big previous & next buttons */
.flickity-prev-next-button {
  width: 50px;
  height: 50px;
}
/* icon color */
.flickity-button-icon {
  fill: black;
}
/* hide disabled button */
.flickity-button:disabled {
  display: none;
}

/* Add a carousel :focus style style to aid accessibility. When focused, users can navigate the carousel with their keyboard. */
.flickity-enabled:focus .flickity-viewport {
  outline: thin dotted;
  outline: 5px auto -webkit-focus-ring-color;
}

/* fade in lazy loaded image */
.carousel-cell-image.flickity-lazyloaded,
.carousel-cell-image.flickity-lazyerror {
  opacity: 1;
}
.carousel figure {
  margin: 0 !important;
}
.carousel figcaption {
    font-size: 12px;
    overflow: auto;
    background-color: white;
    line-height: 1.2em;
    padding: 5px;
}
/* end flickity */

@media (min-width: 375px) {

}
@media (min-width: 414px) {
    .masonry {
        -moz-column-count: 2;
        -webkit-column-count: 2;
        column-count: 2;
    }
}
@media (min-width: 1024px) {
    .header {
        padding-top: 20px;
    }
    .title {
        float: left;
        margin-right: 10px;
        margin-top: 10px;
    }
    #about {
        margin: 0 auto;
        margin-top: 50px;
    }
    .fs-form {
        margin-bottom: 2em !important;
    }
    .cacheCheckMsg {
        font-size: 1em;
    }
    h3 {
        font-size: 16px;
    }
    .masonry {
        -moz-column-count: 4;
        -webkit-column-count: 4;
        column-count: 4;
    }
}
@media (min-width: 1280px) {
    .masonry {
        -moz-column-count: 5;
        -webkit-column-count: 5;
        column-count: 5;
    }
}

